# my-tutorials

tutorial/: LEARN_SEQ.md
tutorial/command_for_linux/: README.md
tutorial/git_learn/: git_learn.md
tutorial/markdwon_learn/: markdown_learn.md
tutorial/modify_and_compile_py311_linux/: README.md
tutorial/modify_and_compile_py311_win/: README.md
tutorial/write_pymodule_with_c_c++/: README.md
tutorial/write_pymodule_with_c_c++/examples/formula_math/: CMakeLists.txt  build_inplace.sh  setup.py
tutorial/write_pymodule_with_c_c++/examples/formula_math/src/: formula_math.cpp
tutorial/write_pymodule_with_c_c++/examples/formula_math/vs_proj/: make_vs_projs.sh
